--- a/snap/snap.html
+++ b/snap/snap.html
@@ -37,14 +37,15 @@
         <script src="src/sha512.js?version=2019-06-27"></script>
         <script src="src/FileSaver.min.js?version=2019-06-27"></script>
         <script>
-            var world;
+            var world, ide;
             window.onload = function () {
                 if ('serviceWorker' in navigator) {
                     navigator.serviceWorker.register('sw.js');
                 }
                 world = new WorldMorph(document.getElementById('world'));
                 new IDE_Morph().openIn(world);
-		var ide = world.children[0];
+		ide = world.children[0];
+		    Process.prototype.enableJS = true;
 		ide.flushBlocksCache("operators");
 		    ide.refreshPalette();
                 loop();
