--- a/console/index.html
+++ b/console/index.html
@@ -4,7 +4,7 @@
     <title>Javascripts</title>
   </head>
   <body>
-    <a href="javascript:var s = document.createElement('script') s.src = 'https://wdentertainment.github.io/console.js' document.body.appendChild(s);">Console</a>
+    <a href="javascript:var s = document.createElement('script') s.src = 'https://wdentertainment.github.io/console.js' document.body.appendChild(s);void(0);">Console</a>
     <p>Shove it in your bookmarks so it will work anywhere!</p>
   </body>
 </html>
