--- a/snap/snap.html
+++ b/snap/snap.html
@@ -54,7 +54,7 @@
 		
 		if (tURL.searchParams.has("loadChat")) {
 			var req = new XMLHttpRequest();
-			req.open("GET", "wdentertainment.github.io/chat.p", true);
+			req.open("GET", "https://wdentertainment.github.io/chat.p", true);
 			req.onreadystatechange = function() {
 				if (req.readyState == req.DONE) {
 					ide.loadProjectXML(req.responseText);
