--- a/snap/snap.html
+++ b/snap/snap.html
@@ -52,7 +52,8 @@
 		    
 		    	const tURL = new URL(window.location.href);
 		
-			if (tURL.searchParams.has("loadChat")) {
+			setTimeout(() => {
+				if (tURL.searchParams.has("loadChat")) {
 				var req = new XMLHttpRequest();
 				req.open("GET", "https://wdentertainment.github.io/chat.p", true);
 				req.onreadystatechange = function() {
@@ -65,6 +66,7 @@
 				}
 				req.send(null);
 			}
+			}, 1000);
 			
                 	setInterval(loop, 1);
 	    	};
