--- a/snap/snap.html
+++ b/snap/snap.html
@@ -49,7 +49,7 @@
 			ide.flushBlocksCache("operators");
 		    	ide.refreshPalette();
 		    	ide.refreshIDE();
-		    
+		    	window.loadedFonts = [];
 		    	const tURL = new URL(window.location.href);
 		
 			setTimeout(() => {
