--- a/redirect/index.html
+++ b/redirect/index.html
@@ -10,7 +10,7 @@
         <script>
             var params = new URL(window.location.href).searchParams;
             
-            window.location.replace(atob(decodeURIComponent(params.get("url")));
+            window.location.replace(atob(decodeURIComponent(params.get("url"))));
         </script>
     </body>
 </html>
